--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-util-is": "^1.0.2",
     "node-thrift-parser": "^0.1.3",
+    "randomstring": "^1.1.5",
     "thriftrw": "^3.11.2"
   }
 }
