--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@lushijie/utils": "^1.0.0",
     "core-util-is": "^1.0.2",
     "node-thrift-parser": "^0.1.3",
     "randomstring": "^1.1.5",
