--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "@lushijie/thrift-json",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,7 +12,6 @@
     "@lushijie/utils": "^1.0.0",
     "core-util-is": "^1.0.2",
     "node-thrift-parser": "^0.1.3",
-    "randomstring": "^1.1.5",
     "thriftrw": "^3.11.2"
   }
 }
