--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.1",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "t2j": "bin/cli.js"
+  },
   "scripts": {
     "test": "node demo/main.js"
   },
@@ -10,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@lushijie/utils": "^1.0.0",
+    "commander": "^2.19.0",
     "core-util-is": "^1.0.2",
     "node-thrift-parser": "^0.1.3",
     "thriftrw": "^3.11.2"
