--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@lushijie/utils": "^1.0.0",
+    "chalk": "^2.4.1",
     "commander": "^2.19.0",
     "core-util-is": "^1.0.2",
     "node-thrift-parser": "^0.1.3",
