--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "tjson": "bin/cli.js"
   },
   "scripts": {
+    "lint": "eslint --fix ./src/",
     "test": "bin/cli.js -f ./demo/test.thrift -o ./demo/test.json"
   },
   "author": "",
@@ -18,5 +19,9 @@
     "commander": "^2.19.0",
     "core-util-is": "^1.0.2",
     "node-thrift-parser": "^0.1.3"
+  },
+  "devDependencies": {
+    "eslint": "^5.8.0",
+    "eslint-config-meishi": "^1.0.1"
   }
 }
