--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "lint": "eslint --fix ./src/",
-    "test": "bin/cli.js -f ./demo/test.thrift -o ./demo/test.json"
+    "test": "bin/cli.js -f ./demo/test.thrift -o ./demo/test.json",
+    "pre-commit": "npm run lint"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "eslint": "^5.8.0",
-    "eslint-config-meishi": "^1.0.1"
+    "eslint-config-meishi": "^1.0.1",
+    "pre-commit": "^1.2.2"
   }
 }
