--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "chalk": "^2.4.1",
     "commander": "^2.19.0",
     "core-util-is": "^1.0.2",
-    "node-thrift-parser": "^0.1.3"
+    "node-thrift-parser": "^0.1.3",
+    "stringify-object": "^3.3.0"
   },
   "devDependencies": {
     "eslint": "^5.8.0",
