--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chalk": "^2.4.1",
     "commander": "^2.19.0",
     "core-util-is": "^1.0.2",
+    "inquirer": "^6.2.0",
     "node-thrift-parser": "^0.1.3",
     "stringify-object": "^3.3.0"
   },
